Esta versión 2.0.0 contendrá en el primer campo de añadido todas las funcionalidades que se pueden realizar con el proyecto

Basado en el formato [Mantener un changelog](http://keepachangelog.com/en/1.0.0/)
Y bajo el versionado semántico [Versionado semántico](http://semver.org/spec/v2.0.0.html).

## [2.7.0] - 2020-04-02
### Añadido
- Generador de enlaces aleatorios para visualizar Facturas

## [2.6.0] - 2020-04-02
### Añadido
- Comando de registro de contadores de consultas en el catálogo
- Log de errores guardados en fichero 
- Modo verbose desde línea de comandos

### Obsolto
- Comando antiguo de registro de contadores de consultas en el catálogo

## [2.5.0] - 2020-02-22
### Añadido
- Consulta para el informe de matrículas

## [2.4.0] - 2019-05-08
### Añadido
- Nueva tarjeta de fichaje

## [2.3.0] - 2018-07-02
### Añadido
- Sistema de eliminado del caché de forma automática
- Sistema de creación de tarjetas de expediciones

### Modificado
- Se crean los logins en el catálogo con el id de la empresa externa

### Corregido
- Error al enviar matrículas

## [2.2.1]  - 2018-06-22
### Modificado
- Creación de usuarios de empresas externas en el catálogo online

### Corregido
- En el proyecto, inicialmente, se había commitado vendor. Se elimina

## [2.2.0] - 2018-05-23
### Añadido
- Funcionalidad para generar un login en el catálogo online

### Corregido
- Ruta externa para los ficheros temporales

## [2.1.1] - 2018-04-24
### Corregido
- Inserción de las matrículas a la nueva direccion del catálogo y sin necesidad de JWT

## [2.1.0] - 2018-04-09
### Añadido
Gestión del stock de soledad desde recalvi

## [2.0.0] - 2018-04-06
### Añadido
- Alta de clientes de microgesta en el catálogo 
- Vaciado de la cache de publicidades del catálogo cuando cambian las mismas en microgest
- Vaciado de la cache de genéricos del catálogo cuando cambian las mismas en microgest
- Actualización del contador de las matriculas del catálogo cuando cambian las mismas en microgest